2008-12-18 [M] Removed api folder {GauGau}
2008-12-18 [B] Fixed filmstrip work for odd number of thumbnail in filmstrip 
2008-12-18 [A] Added 6 new plugin hooks to be able to add custom CAPTCHA {SaWey}
2008-12-17 [O] Added code to disable the browse button if no album is selected on upload page {Abbas}
2008-12-17 [O] Added the disabled button to the swfupload button sprite image {Abbas}
2008-12-17 [B] Fixed implementation of upload choices including alternate ones from plugins {Paver}
2008-12-17 [O] Changed 3 themes to use thumbnails.js instead of inline js. {SaWey}
2008-12-16 [B] Added swfupload style to all themes {Abbas}
2008-12-16 [B] Fixed category list in modifyalb.php {Paver}
2008-12-15 [A] Added keyword separator {Paver}
2008-12-15 [B] Added missing javascripts {SaWey}
2008-12-15 [O] Replaced inline javascript of admin and albmgr section + optimised for jQuery (admin.js, albmgr.js) {SaWey}
2008-12-15 [A] Added previous and next tabs, plus dropdown list of tabs (with configuration option) {Paver}
2008-12-15 [O] Moved code to themes to create theme_msg_box, _cpg_die, _create_tabs, _breadcrumb {Paver}
2008-12-15 [O] Replaced inline javascript of slideshow btn & pic_info btn (displayimage.js) {SaWey}
2008-12-15 [O] Replaced inline javascript of sidebar (dTree.js) {SaWey}
2008-12-15 [O] Replaced inline javascript of bookmark function (scripts.js) {SaWey}
2008-12-15 [O] Replaced sort table in thumbnails by external javascript (thumbnails.js) {SaWey}
2008-12-15 [A] Added the fallback mechanism for flash upload interface {Abbas}
2008-12-14 [A] Modified breadcrumb for meta-albums to show more intuitive breadcrumb {Paver}
2008-12-14 [A] Added navbar buttons for inactive previous and next {Paver}
2008-12-14 [B] Fixed some bugs in voting and changed it to make better use of jQuery {SaWey}
2008-12-14 [C] Moved vanity icons into separate folder {GauGau}
2008-12-14 [C] Re-did batch-add graphics for fresher look {GauGau}